--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    
+      <link href="style01.css" rel="stylesheet" type="text/css" media="all">
+      
+      <header>
+        <h1>Parallax header</h1>
+        <p>Parallax scroll effect like Twitter. Pure css, javacsript free.</p>
+      </header>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<main>
 
+  <style>
+    p{
+      text-align:center;
+    }
+  </style>
+<div style="text-align: center">
+  <img src="画像のパス">
+</div>
 
+<p><font size="5">部位で見る自分について</font></p>
+
+  <div class="flex_test-box">
+    <div class="flex_test-item">
+        1.コンテンツが入ります。コンテンツが入ります。
+        <div class="button001">
+          <a href="#">心</a>
+        </div>
+    </div>
+    <div class="flex_test-item">
+        2.コンテンツが入ります。コンテンツが入ります。
+        <div class="button001">
+          <a href="#">胃</a>
+        </div>
+    </div>
+    <div class="flex_test-item">
+        3.コンテンツが入ります。コンテンツが入ります。
+        <div class="button001">
+          <a href="#">脚</a>
+        </div>
+    </div>
+  
+</div>
+  
+  
+</main>
 
     </div>
   </body>
