--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -22,7 +22,8 @@
   
 </div>
 
-<p><font size="5">部位で見る自分について</font></p>
+
+<p class="fadeIn">部位で見る自分について</p>
 
   <div class="flex_test-box">
     <div class="flex_test-item">
