--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -5,8 +5,8 @@
       <link href="style01.css" rel="stylesheet" type="text/css" media="all">
       
       <header>
-        <h1>Parallax header</h1>
-        <p>Parallax scroll effect like Twitter. Pure css, javacsript free.</p>
+        <h1>いろんなみかた</h1>
+        <p>基本ポジティブなんだよな</p>
       </header>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
