--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -47,7 +47,10 @@
   
 </div>
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU"  width="300" height="300">
+
+<div style="text-align: left">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU">
+</div>
 <div style="text-align: right">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU">
 </div>
