--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -49,10 +49,10 @@
 
 
 <div style="text-align: left">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU"width="200" height="200">
 </div>
 <div style="text-align: right">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU"width="200" height="200">
 </div>
 </main>
 
