--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -47,12 +47,15 @@
   
 </div>
 
-
+<br>
 <div style="text-align: left">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU"width="200" height="200">
+  <img src="images/IMG_2176.png"width="200" height="200">
 </div>
 <div style="text-align: right">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmMt134SGKITEEkRY4UQLAGPpwLb_0HNR6vA&usqp=CAU"width="200" height="200">
+  <img src="images/IMG_2792.png"width="200" height="200">
+</div>
+<div style="text-align: left">
+  <img src="images/DSC_0466.jpg"width="200" height="200">
 </div>
 </main>
 
