--- a/sample/kokoro.html
+++ b/sample/kokoro.html
@@ -77,6 +77,12 @@
                                 </div>
                             <h2><span class="under">生活リズム</span>
                                 <BR><br>
+                                    <div class="box23">
+                                        <p>  <a>朝の10分ヨガができるように余裕を持って起きてる。<br>
+                                            <a>   週1ぐらいでサボる。</a><br>
+                                           <a>夜は12時までに寝たいとは思っているが…</a><br>
+                                           </p>
+                                    </div>
                                     <a>朝の10分ヨガができるように余裕を持って起きてる。<br>
                                      <a>   週1ぐらいでサボる。</a><br>
                                     <a>夜は12時までに寝たいとは思っているが…</a><br>
