--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -57,6 +57,21 @@
 <div style="text-align: left">
   <img src="images/DSC_0466.jpg"width="200" height="200">
 </div>
+
+<div class="hover01 column">
+<div style="text-align: left"></div>
+    <figure><img src="images/IMG_2176.png"width="200" height="200" /></figure>
+  </div>
+  <div>
+    <figure><img src="https://picsum.photos/300/200?image=1024" /></figure>
+  </div>
+  <div>
+    <figure><img src="https://picsum.photos/300/200?image=611" /></figure>
+  </div>
+</div>
+ 
+
+
 </main>
 
     </div>
