--- a/sample/i.html
+++ b/sample/i.html
@@ -16,9 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <main>
- 
+  <div class="container">
+  <div class="box18">
+    <p>は ら が へ 減 っ て は<br>戦 は で き ぬ</p>
+</div></div>
 
-<h1 class="cp_h1title">は ら が へ っ て は<br>戦 は で き ぬ</h1>
 <body>
   <div style="width:300px; margin:0 auto;">
     <div class="container">
