--- a/sample/i.html
+++ b/sample/i.html
@@ -20,19 +20,31 @@
   <div class="container">
 <div class="bg_pattern Paper_v2"></div>
 <div class="section">
-  <div class="_a"><a href="https://125naroom.com/web/3737" target="_blank">は ら が 減 っ て は<br>戦 は で き ぬ</a></div>
+  <div class="_a"><a href="https://kotobank.jp/word/%E8%85%B9%E3%81%8C%E6%B8%9B%E3%81%A3%E3%81%A6%E3%81%AF%E6%88%A6%E3%81%8C%E3%81%A7%E3%81%8D%E3%81%AC-2236373#:~:text=%E8%85%B9%E3%81%8C%E6%B8%9B%E3%81%A3%E3%81%A6%E3%81%84%E3%81%A6,%E3%81%9A%E3%80%81%E6%88%90%E6%9E%9C%E3%81%8C%E4%B8%8A%E3%81%8C%E3%82%89%E3%81%AA%E3%81%84%E3%80%82" target="_blank">は ら が 減 っ て は<br>戦 は で き ぬ</a></div>
 </div>
 <body>
-  <div style="width:500px; margin: 100px; ">
-    <div class="container">
-      <div class="distorted-circle"></div>
-  </div></div>
-  <div style="width:400px; margin:150right;">
-    <div class="container">
-      <div class="distorted-circle"></div>
-  </div></div>
-  <div style="width:800px; margin:0 auto;">
-    <div class="container">
-      <div class="distorted-circle"></div>
-  </div></div>
+  <div class="div_design010">
+
+    <div class="div_design010_inner">
+      <div class="div_design010_contents">
+        <img src="img/300x180.png">
+        <p>BOXデザイン010</p>
+      </div>
+    </div>
+    
+    <div class="div_design010_inner">
+      <div class="div_design010_contents">
+        <img src="img/300x180.png">
+        <p>BOXデザイン010</p>
+      </div>
+    </div>
+    
+    <div class="div_design010_inner">
+      <div class="div_design010_contents">
+        <img src="img/300x180.png">
+        <p>BOXデザイン010</p>
+      </div>
+    </div>
+  
+  </div>
 </body>
